--- a/yt-lytics-syntax-squad/app/views/ytlyticsAkka.html
+++ b/yt-lytics-syntax-squad/app/views/ytlyticsAkka.html
@@ -141,6 +141,8 @@
     };
 
     socket.onmessage = (event) => {
+        if(event?.data == "HeartBeat!!!") return;
+
         const jsonData = JSON.parse(event?.data);
         // console.log(jsonData)
         if(jsonData?.error) {
@@ -210,7 +212,7 @@
         socket.send(JSON.stringify(message));
     }
 
-    document.getElementById('response').addEventListener('click', function(event) {
+    document.body.addEventListener('click', function(event) {
         if (event.target && event.target.classList.contains('channel-link')) {
             const channel = event.target.textContent;
             console.log('Channel clicked: ', channel);
@@ -222,6 +224,13 @@
             console.log('tags clicked: ', videoId);
             sendSocketMessage("tags",videoId);
         }
+
+        if (event.target && event.target.classList.contains('hashtag-link')) {
+            const hashTagId = event.target.dataset.hashtagId;
+            console.log('hashTag clicked: ', hashTagId);
+            sendSocketMessage("hashTag",hashTagId);
+        }
+
         if (event.target && event.target.classList.contains('wordstats-link')) {
             const searchTerms = event.target.closest('.search-item').querySelector('h3').textContent.split('|')[0].replace('SearchTerm: ', '').trim();
             console.log("Requesting word stats for:", searchTerms);
@@ -276,6 +285,11 @@
 
                 let description = video?.description?.length > 200 ? video.description.substring(0,200) + "..." : video.description;
 
+                let tagsWithLinks;
+                video?.tags.forEach((tag) =>{
+                    tagsWithLinks += `<a href="javascript:void(0);" data-hashtag-id="${tag}" class="hashtag-link">${tag}</a>, `;
+                })
+
                 ytVideoDiv.innerHTML = `
                     ${index + 1}. Title: <a href="${video.htmlLinkforTitle}">${video.title}</a>,`
                     +
@@ -283,8 +297,9 @@
                     +
                     `Description: ${description} `
                     +
-                    `<a href="javascript:void(0);" data-tag-id=${video.videoId} class="tags-link">Tags</a>`
+                    tagsWithLinks
                 ;
+                
                 searchResultsList.appendChild(ytVideoDiv);
         });
         document.body.innerHTML = searchResultsList.innerHTML;
